fdo#45533 make it easier to debug RTF copy&paste

Previously there was only a compile-time switch to dump contents of RTF
paste. Remove this, and add two environment variables instead:

- SW_DEBUG_RTF_PASTE_TO: to dump what would be pasted
- SW_DEBUG_RTF_PASTE_FROM: to paste contents of a file, instead of the
  real clipboard

Change-Id: I65f89417ec1cf781ace41df7916791f2199fe104